<resources>
    <string name="app_name">Hotel-Ya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">G Listar</string>
    <string name="menu_slideshow">S Mi Hotel</string>
    <string name="menu_mis_habitaciones">Mis Habitaciones</string>
    <string name="menu_reservacion">Reservacion</string>
    <string name="menu_agregarHotel">Agregar Hotel</string>
    <string name="menu_editarHotel">Editar Hotel</string>
    <string name="menu_eliminarHotel">Eliminar Hotel</string>
    <string name="menu_perfilHotel">perfil Hotel</string>


    <!--Botones-->
    <string name="agregar">Agregar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>

    <string name="ingresar_imagen">Ingresar Imagen</string>



    <!--Hoteles-->
    <string name="registro_hoteles">Registro de Hotel</string>
    <string name="eliminacion_hoteles">Eliminar Hotel</string>
    <string name="editar_hoteles">Editar Hotel</string>
    <string name="descripcion_imagen">Descripcion de imagen</string>
    <string name="nombre_hotel">Nombre del hotel</string>
    <string name="telefono_hotel">Telefono</string>
    <string name="correo_hotel">correo</string>
    <string name="cordenadas_hotel">cordenadas</string>
    <string name="estrellas_hotel">Estrellas</string>
    <string name="descripcion_hotel">Descripcion</string>
    <string name="direccion_hotel">Direccion</string>
    <string name="contacto">Informacion de Contacto</string>
    <string name="importante">Importante!!!</string>
    <string name="mensajeEliminacion">Acaba de acceder a la ventana de eliminacion de su hotel,
                                      Si continua no podra recuperar los datos de su hotel y si
                                      Si desea eliminar su hotel presione el boton de abajo</string>


</resources>