<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_mis_habitaciones"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mis_habitaciones" />

        <item
            android:id="@+id/nav_reservacion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reservacion" />

        <item
            android:id="@+id/nav_crear_hotel"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_agregarHotel" />
        <item
            android:id="@+id/nav_editar_hotel"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/editar_hoteles" />
        <item
            android:id="@+id/nav_eliminar_hotel"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/eliminacion_hoteles" />
        <item
            android:id="@+id/nav_perfil_hotel"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_perfilHotel" />
    </group>
</menu>