<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotel_ya.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hotel_ya.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hotel_ya.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_mis_habitaciones"
        android:name="com.example.hotel_ya.ui.mishabitaciones.MisHabitacionesFragment"
        android:label="@string/menu_mis_habitaciones"
        tools:layout="@layout/mis_habitaciones_fragment" />

    <fragment
        android:id="@+id/nav_reservacion"
        android:name="com.example.hotel_ya.ui.reservacion.ReservacionFragment"
        android:label="@string/menu_reservacion"
        tools:layout="@layout/reservacion_fragment" />

    <fragment
        android:id="@+id/nav_crear_hotel"
        android:name="com.example.hotel_ya.ui.agregarHotel.AgregarFragment"
        android:label="@string/menu_agregarHotel"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_editar_hotel"
        android:name="com.example.hotel_ya.ui.editarHotel.EditarFragment"
        android:label="@string/menu_agregarHotel"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_eliminar_hotel"
        android:name="com.example.hotel_ya.ui.eliminarHotel.EliminarFragment"
        android:label="@string/menu_agregarHotel"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_perfil_hotel"
        android:name="com.example.hotel_ya.ui.perfilHotel.PerfilHotelFragment"
        android:label="@string/menu_agregarHotel"
        tools:layout="@layout/fragment_slideshow" />


</navigation>